# scraping-experiments

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_scraper.py
scrapers/: coingecko.py  crypto_data.py  sw_scaper.py  yf_scraper.py
tests/: conftest.py  test_scraper.py  test_yf_scraper.py
tests/resources/: AAPL.html  AMD.html  CMUD.html  FSCT.html  IEVL.html  MSFT.html  fsct_mock.html  sw_rewards_sample.html
yf_scraper/: scraper.py
