[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Experimental scraper for Yahoo Finance and other websites"
authors = ["Mario Dagrada <mariodagrada24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
selenium = "^4.0.0"
pycoingecko = "^2.2.0"
tabulate = "^0.8.9"
pandas = "^1.3.4"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
